--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,20 +1,16 @@
 {
-  "compilerOptions": {
-     "lib": [
-        "es5",
-        "es6"
-     ],
-     "target": "es6",
-     "module": "commonjs",
-     "esModuleInterop" : true,
-     "moduleResolution": "node",
-     "outDir": "./dist",
-     "rootDir": "./src",
-     "emitDecoratorMetadata": true,
-     "experimentalDecorators": true,
-     "sourceMap": true,
-  },
-  "include": [
-    "src/**/*"
-  ]
+    "compilerOptions": {
+        "lib": ["es5", "es6"],
+        "target": "es6",
+        "module": "commonjs",
+        "esModuleInterop": true,
+        "moduleResolution": "node",
+        "outDir": "./dist",
+        "rootDir": "./src",
+        "emitDecoratorMetadata": true,
+        "experimentalDecorators": true,
+        "sourceMap": true
+    },
+    "include": ["src/**/*"],
+    "exclude": ["client/**/*", "node_modules/**/*", "**/node_modules/*"]
 }
